refactor: remove overflow-hidden from html & body

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,11 +29,10 @@
 }
 
 html {
-    @apply overflow-hidden;
+    scroll-behavior: smooth;
 }
 
 body {
-    @apply overflow-hidden;
     @apply text-main-text;
     @apply bg-main-background;
 }
